# taskflow-ajaykumar

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users.py  002_create_projects.py  003_create_tasks.py  004_seed_data.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: events.py  logging.py
backend/app/errors/: exceptions.py  handlers.py
backend/app/models/: __init__.py  base.py  project.py  task.py  user.py
backend/app/repositories/: project_repo.py  task_repo.py  user_repo.py
backend/app/routers/: __init__.py  auth.py  projects.py  tasks.py  users.py
backend/app/schemas/: auth.py  project.py  task.py  user.py
backend/app/services/: access_service.py  auth_service.py  project_service.py  task_service.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_auth.py  test_projects_tasks.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  queries.ts
frontend/src/components/: KanbanColumn.tsx  Navbar.tsx  TaskDialog.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useProjectEvents.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  ProjectBoard.tsx  Register.tsx
frontend/src/store/: useAuthStore.ts
frontend/src/types/: components.ts  index.ts  store.ts  user-stats.ts
(+8 files in other folders)
